tests/valid_inputs/class_method_basic.cpp

struct S {
	int foo() {return 42;}
};

int main() {
	S s;
	return s.foo();
}
