tests/invalid_inputs/sema/def_arg_this.cpp

struct S {
	void foo(S *s = this) {
	
	}
};

int main() {
	S s;
}

